# CODM-EVAL-AI

./: .gitignore  README.md  render.yaml
apps/api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: clans.py  leaderboard.py  matches.py  players.py  reports.py  teams.py  tournaments.py  uploads.py
apps/api/app/core/: auth.py  config.py  logging.py  supabase_client.py
apps/api/app/models/: schemas.py
apps/api/app/ocr/: codm_parser.py  paddle_engine.py
apps/api/app/repositories/: clan_repository.py  leaderboard_repository.py  match_repository.py  player_repository.py  screenshot_repository.py  team_repository.py  tournament_repository.py
apps/api/app/scoring/: scoring_service.py
apps/api/app/services/: chart_service.py  matching_service.py  ocr_service.py  pdf_report_service.py  upload_service.py
apps/api/app/services/templates/: report.html
apps/api/tests/: test_codm_parser.py  test_matching_service.py  test_scoring_service.py
apps/api/tests/fixtures/: rank_tab_tokens.json
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: create-tournament-dialog.tsx  leaderboard-chart.tsx  ocr-status-badge.tsx  providers.tsx  screenshot-review-panel.tsx  tournament-header.tsx  user-menu.tsx
apps/web/src/lib/: api.ts  match-type.ts  types.ts
supabase/migrations/: 0001_init.sql  0002_storage.sql  0003_remove_clans.sql  0004_drop_screenshot_team.sql  0005_match_scoring_mode.sql
(+25 files in other folders)
